2006-11-14  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	(lm_connection_authenticate_and_block):
	- Fixed a memory leak reported by Ganapati Kundapur.
	- Fixes LM-66.

2006-10-22  Richard Hult  <richard@imendio.com>

	* loudmouth/lm-connection.c (connection_do_close)
	(lm_connection_send_with_reply_and_block): 
	- Check that we have the source before removing it and set the pointer 
	  to NULL.
	- Fixes LM-60.

2006-10-17  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-message-node.c: (lm_message_node_to_string):
	- Small fixup of the previous LM-48 fix.

2006-10-16  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_succeeded),
	(_lm_connection_failed_with_error), (connection_do_open),
	(connection_do_close), (lm_connection_new):
	- Keep a reference to LmConnectData and remove the source if connect
	  is cancelled before the connection is open.
	- Fixes LM-59.
	* loudmouth/lm-message-node.c: (lm_message_node_to_string):
	- Use GString to build message node XML.
	- Escape the attribute values unless raw-mode is specified.
	- Fixes LM-48.
	- Patch from Dafydd Harries.

2006-09-21  Mikael Hallendal  <micke@imendio.com>

	* NEWS:
	* configure.ac:
	- Updated for 1.1.4

2006-09-21  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_succeeded),
	(_lm_connection_failed_with_error), (connection_buffered_write_cb),
	(connection_do_close):
	- Check that we find a resource before trying to destroy it.
	- Fixes warning described in LM-50.


2006-09-21  Richard Hult  <richard@imendio.com>

	* loudmouth/lm-connection.c (connection_connect_cb): 
	* loudmouth/lm-proxy.c (_lm_proxy_connect_cb): 
	- Initialize len, fixes some random bugs on connection errors, where 
	  the error code returned is random numbers.
	- Fixes LM-58.

2006-09-13  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Unref the proxy if set, plugs a leak.
	- Fixes LM-51.
